--- a/template/video.html
+++ b/template/video.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>WebRTC One-on-One Video Call with Chat</title>
+<title>WebRTC One-on-One Video Call with Screen Sharing and Mute/Unmute</title>
 <style>
   body {
     display: flex;
@@ -26,6 +26,7 @@
     display: flex;
     justify-content: space-around;
     width: 70%;
+    position: relative;
   }
 
   #localVideoContainer, #remoteVideoContainer {
@@ -68,6 +69,7 @@
 
   #chatForm {
     display: flex;
+    align-items: center;
   }
 
   #chatInput {
@@ -90,16 +92,100 @@
   #chatButton:hover {
     background-color: #357ae8;
   }
+
+  #fileInput {
+    display: none;
+  }
+
+  #attachmentLabel {
+    cursor: pointer;
+    margin-left: 5px;
+  }
+
+  #attachmentLabel svg {
+    width: 24px;
+    height: 24px;
+    fill: #4285F4;
+  }
+
+  #attachmentLabel:hover svg {
+    fill: #357ae8;
+  }
+
+  #screenShareButton, #muteButton {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
+  #muteButton {
+    right: 40px;
+  }
+
+  #screenShareButton svg, #muteButton svg {
+    width: 24px;
+    height: 24px;
+    fill: #4285F4;
+  }
+
+  #screenShareButton svg:hover, #muteButton svg:hover {
+    fill: #357ae8;
+  }
+
+  .message {
+    display: flex;
+    margin: 5px 0;
+  }
+
+  .message .bubble {
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 75%;
+  }
+
+  .message.sent {
+    justify-content: flex-end;
+  }
+
+  .message.sent .bubble {
+    background-color: #dcf8c6;
+  }
+
+  .message.received {
+    justify-content: flex-start;
+  }
+
+  .message.received .bubble {
+    background-color: #fff;
+    border: 1px solid #ddd;
+  }
+
+  .message a {
+    color: #4285F4;
+    text-decoration: none;
+  }
+
+  .message a:hover {
+    text-decoration: underline;
+  }
 </style>
 <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-<h2>WebRTC One-on-One Video Call with Chat</h2>
+<h2>WebRTC One-on-One Video Call with Screen Sharing and Mute/Unmute</h2>
 <div id="mainContainer">
   <div id="videosContainer">
     <div id="localVideoContainer">
       <video id="localVideo" autoplay muted></video>
       <div id="nameTag">You</div>
+      <div id="screenShareButton">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 16" id="Link"><path fill-rule="evenodd" d="M11 10h1v3c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h3v1H1v10h10v-3zM6 2l2.25 2.25L5 7.5 6.5 9l3.25-3.25L12 8V2H6z" fill="#000000" class="color000000 svgShape"></path></svg>
+      </div>
+      <div id="muteButton">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="Unmute"><path fill-rule="evenodd" d="M12 8.02c0 1.09-.45 2.09-1.17 2.83l-.67-.67c.55-.56.89-1.31.89-2.16 0-.85-.34-1.61-.89-2.16l.67-.67A3.99 3.99 0 0 1 12 8.02zM7.72 2.28 4 6H2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2l3.72 3.72c.47.47 1.28.14 1.28-.53V2.81c0-.67-.81-1-1.28-.53zm5.94.08-.67.67a6.996 6.996 0 0 1 2.06 4.98c0 1.94-.78 3.7-2.06 4.98l.67.67A7.973 7.973 0 0 0 16 8c0-2.22-.89-4.22-2.34-5.66v.02zm-1.41 1.41-.69.67a5.05 5.05 0 0 1 1.48 3.58c0 1.39-.56 2.66-1.48 3.56l.69.67A5.971 5.971 0 0 0 14 8.02c0-1.65-.67-3.16-1.75-4.25z" fill="#000000" class="color000000 svgShape"></path></svg>
+      </div>
+      
     </div>
     <div id="remoteVideoContainer">
       <video id="remoteVideo" autoplay></video>
@@ -111,6 +197,25 @@
     <form id="chatForm">
       <input id="chatInput" type="text" placeholder="Type a message..." autocomplete="off" disabled>
       <button id="chatButton" type="submit" disabled>Send</button>
+      <label id="attachmentLabel" for="fileInput">
+        <svg height="24px" width="24px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 280.067 280.067" xml:space="preserve">
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+          <g id="SVGRepo_iconCarrier">
+            <g>
+              <path style="fill:#000000;" d="M149.823,257.142c-31.398,30.698-81.882,30.576-113.105-0.429
+              c-31.214-30.987-31.337-81.129-0.42-112.308l-0.026-0.018L149.841,31.615l14.203-14.098c23.522-23.356,61.65-23.356,85.172,0
+              s23.522,61.221,0,84.586l-125.19,123.02l-0.044-0.035c-15.428,14.771-40.018,14.666-55.262-0.394
+              c-15.244-15.069-15.34-39.361-0.394-54.588l-0.044-0.053l13.94-13.756l69.701-68.843l13.931,13.774l-83.632,82.599
+              c-7.701,7.596-7.701,19.926,0,27.53s20.188,7.604,27.88,0L235.02,87.987l-0.035-0.026l0.473-0.403
+              c15.682-15.568,15.682-40.823,0-56.39s-41.094-15.568-56.776,0l-0.42,0.473l-0.026-0.018l-14.194,14.089L50.466,158.485
+              c-23.522,23.356-23.522,61.221,0,84.577s61.659,23.356,85.163,0l99.375-98.675l14.194-14.089l14.194,14.089l-14.194,14.098
+              l-99.357,98.675C149.841,257.159,149.823,257.142,149.823,257.142z"></path>
+            </g>
+          </g>
+        </svg>
+      </label>
+      <input id="fileInput" type="file" disabled>
     </form>
   </div>
 </div>
@@ -138,11 +243,20 @@
     const remoteVideo = document.getElementById('remoteVideo');
     const chatInput = document.getElementById('chatInput');
     const chatButton = document.getElementById('chatButton');
+    const fileInput = document.getElementById('fileInput');
+    const screenShareButton = document.getElementById('screenShareButton');
+    const muteButton = document.getElementById('muteButton');
+    const messages = document.getElementById('messages');
     const peerConnection = new RTCPeerConnection(peerConnectionConfig);
+    let dataChannel;
+    let localStream;
+
+    screenShareButton.disabled = true;
 
     // Display local stream
     navigator.mediaDevices.getUserMedia({ video: true, audio: true })
       .then(stream => {
+        localStream = stream;
         localVideo.srcObject = stream;
         stream.getTracks().forEach(track => peerConnection.addTrack(track, stream));
         createOffer();  // Automatically create offer after getting user media
@@ -153,7 +267,33 @@
       remoteVideo.srcObject = event.streams[0];
       chatInput.disabled = false;
       chatButton.disabled = false;
+      fileInput.disabled = false;
+      screenShareButton.disabled = false;
     };
+
+    // Create data channel
+    peerConnection.ondatachannel = event => {
+      dataChannel = event.channel;
+      setupDataChannel();
+    };
+
+    dataChannel = peerConnection.createDataChannel("chat");
+    setupDataChannel();
+
+    function setupDataChannel() {
+      dataChannel.onopen = () => {
+        console.log("Data channel is open");
+      };
+
+      dataChannel.onmessage = event => {
+        const msg = JSON.parse(event.data);
+        if (msg.type === 'text') {
+          displayMessage(msg, 'received');
+        } else if (msg.type === 'file') {
+          displayFile(msg, 'received');
+        }
+      };
+    }
 
     // Send any ice candidates to the other peer
     peerConnection.onicecandidate = event => {
@@ -167,6 +307,10 @@
 
     peerConnection.oniceconnectionstatechange = () => {
       console.log('ICE Connection State Change:', peerConnection.iceConnectionState);
+      if (peerConnection.iceConnectionState === 'disconnected' || peerConnection.iceConnectionState === 'failed' || peerConnection.iceConnectionState === 'closed') {
+        alert("The remote user has disconnected. You will be redirected to the login page.");
+        window.location.href = '/';
+      }
     };
 
     peerConnection.onsignalingstatechange = () => {
@@ -216,29 +360,100 @@
     }
 
     // Chat functionality
-    const chatForm = document.getElementById('chatForm');
-    const messages = document.getElementById('messages');
-
     chatForm.addEventListener('submit', function(e) {
       e.preventDefault();
       if (chatInput.value) {
-        const msg = { user: userName, message: chatInput.value };
-        socket.emit('chat message', msg);
-        displayMessage(msg);
+        const msg = { type: 'text', user: userName, message: chatInput.value };
+        dataChannel.send(JSON.stringify(msg));
+        displayMessage(msg, 'sent');
         chatInput.value = '';
       }
     });
 
-    socket.on('chat message', function(msg) {
-      displayMessage(msg);
-    });
-
-    function displayMessage(msg) {
+    function displayMessage(msg, type) {
       const item = document.createElement('div');
-      item.textContent = `${msg.user}: ${msg.message}`;
+      item.classList.add('message', type);
+      const bubble = document.createElement('div');
+      bubble.classList.add('bubble');
+      bubble.textContent = `${msg.user}: ${msg.message}`;
+      item.appendChild(bubble);
       messages.appendChild(item);
       messages.scrollTop = messages.scrollHeight;
     }
+
+    // File sharing functionality
+    fileInput.addEventListener('change', function() {
+      const file = fileInput.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          const msg = {
+            type: 'file',
+            user: userName,
+            fileName: file.name,
+            fileData: e.target.result
+          };
+          dataChannel.send(JSON.stringify(msg));
+          displayFile(msg, 'sent');
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
+    function displayFile(msg, type) {
+      const item = document.createElement('div');
+      item.classList.add('message', type);
+      const bubble = document.createElement('div');
+      bubble.classList.add('bubble');
+      const link = document.createElement('a');
+      link.href = msg.fileData;
+      link.download = msg.fileName;
+      link.textContent = `${msg.user} shared a file: ${msg.fileName}`;
+      bubble.appendChild(link);
+      item.appendChild(bubble);
+      messages.appendChild(item);
+      messages.scrollTop = messages.scrollHeight;
+    }
+
+    // Screen sharing functionality
+    screenShareButton.addEventListener('click', async () => {
+      try {
+        const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
+        const screenTrack = stream.getVideoTracks()[0];
+
+        // Replace the current video track with the screen track
+        const sender = peerConnection.getSenders().find(s => s.track.kind === 'video');
+        sender.replaceTrack(screenTrack);
+
+        // Listen for when the user stops sharing the screen
+        screenTrack.onended = () => {
+          navigator.mediaDevices.getUserMedia({ video: true, audio: true }).then(stream => {
+            const newTrack = stream.getVideoTracks()[0];
+            sender.replaceTrack(newTrack);
+            localVideo.srcObject = stream;
+          });
+        };
+
+        // Display the screen share in the local video element
+        localVideo.srcObject = stream;
+      } catch (error) {
+        console.error("Error sharing screen: ", error);
+      }
+    });
+
+    // Mute/Unmute functionality
+    muteButton.addEventListener('click', () => {
+      localStream.getAudioTracks()[0].enabled = !localStream.getAudioTracks()[0].enabled;
+      if (localStream.getAudioTracks()[0].enabled) {
+        muteButton.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="Unmute"><path fill-rule="evenodd" d="M12 8.02c0 1.09-.45 2.09-1.17 2.83l-.67-.67c.55-.56.89-1.31.89-2.16 0-.85-.34-1.61-.89-2.16l.67-.67A3.99 3.99 0 0 1 12 8.02zM7.72 2.28 4 6H2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2l3.72 3.72c.47.47 1.28.14 1.28-.53V2.81c0-.67-.81-1-1.28-.53zm5.94.08-.67.67a6.996 6.996 0 0 1 2.06 4.98c0 1.94-.78 3.7-2.06 4.98l.67.67A7.973 7.973 0 0 0 16 8c0-2.22-.89-4.22-2.34-5.66v.02zm-1.41 1.41-.69.67a5.05 5.05 0 0 1 1.48 3.58c0 1.39-.56 2.66-1.48 3.56l.69.67A5.971 5.971 0 0 0 14 8.02c0-1.65-.67-3.16-1.75-4.25z" fill="#000000" class="color000000 svgShape"></path></svg>
+        `;
+      } else {
+        muteButton.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="Mute"><g fill="none" fill-rule="evenodd"><g fill="#000000" class="color000000 svgShape"><path d="M8 2.81v10.38c0 .67-.81 1-1.28.53L3 10H1c-.55 0-1-.45-1-1V7c0-.55.45-1 1-1h2l3.72-3.72C7.19 1.81 8 2.14 8 2.81zm7.53 3.22l-1.06-1.06-1.97 1.97-1.97-1.97-1.06 1.06L11.44 8 9.47 9.97l1.06 1.06 1.97-1.97 1.97 1.97 1.06-1.06L13.56 8l1.97-1.97z" fill="#000000" class="color000000 svgShape"></path></g></g></svg>
+        `;
+      }
+    });
   });
 </script>
 </body>
